# backend/swagger/swagger-output.json
@@ -1035,6 +1035,58 @@
         }
       }
     },
+    "/api/couple/{coupleInfoId}/schedules-classifications/{coupleScheduleClassificationId}": {
+      "delete": {
+        "tags": [
+          "couple"
+        ],
+        "summary": "token*",
+        "description": "특정 커플의 일정 필터를 삭제하는 API",
+        "parameters": [
+          {
+            "name": "coupleInfoId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "coupleScheduleClassificationId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "params",
+            "in": "params",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "coupleInfoId": {
+                  "type": "number",
+                  "example": 0
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/user/login": {
       "post": {
         "tags": [
